[gd_scene load_steps=5 format=3 uid="uid://6ou00fwhqqui"]

[ext_resource type="Script" path="res://arena.gd" id="1_bvhoi"]
[ext_resource type="Script" path="res://player.gd" id="2_0dt3r"]
[ext_resource type="PackedScene" uid="uid://dtwsqc7gsa8b7" path="res://hero.tscn" id="3_ukurl"]
[ext_resource type="Script" path="res://refresh.gd" id="4_iim3w"]

[node name="Arena" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvhoi")

[node name="Player1" type="Control" parent="."]
anchors_preset = 0
offset_left = 318.0
offset_top = 430.0
offset_right = 358.0
offset_bottom = 470.0
script = ExtResource("2_0dt3r")

[node name="Hero" parent="Player1" node_paths=PackedStringArray("target") instance=ExtResource("3_ukurl")]
target = NodePath("../../Player2/Hero")

[node name="Player2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1506.0
offset_top = 425.0
offset_right = 1546.0
offset_bottom = 465.0
script = ExtResource("2_0dt3r")

[node name="Hero" parent="Player2" node_paths=PackedStringArray("target") instance=ExtResource("3_ukurl")]
target = NodePath("../../Player1/Hero")

[node name="BattleLog" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 987.0
offset_right = 1283.0
offset_bottom = 1397.0
theme_override_font_sizes/font_size = 30
editable = false

[node name="Refresh" type="Button" parent="."]
custom_minimum_size = Vector2(70, 30)
layout_mode = 0
offset_left = 1175.0
offset_top = 508.0
offset_right = 1375.0
offset_bottom = 608.0
theme_override_font_sizes/font_size = 40
text = "重开"
script = ExtResource("4_iim3w")

[node name="Turn" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1175.0
offset_top = 206.0
offset_right = 1375.0
offset_bottom = 306.0
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]回合 1[/center]"
